--- a/index.ipynb
+++ b/index.ipynb
@@ -192,8 +192,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_trips(trips):\n",
-    "    return list(map(lambda trip: {'trip_distance': trip['trip_distance'], 'pickup_latitude': trip['pickup_latitude'], 'pickup_longitude': trip['pickup_longitude']},trips))\n"
+    "#def parse_trips(trips):\n",
+    " #   return list(map(lambda trip: {'trip_distance': trip['trip_distance'], 'pickup_latitude': trip['pickup_latitude'], 'pickup_longitude': trip['pickup_longitude']},trips))\n"
    ]
   },
   {
