Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,6 +192,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def parse_trips(trips):\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
     "#def parse_trips(trips):\n",
     " #   return list(map(lambda trip: {'trip_distance': trip['trip_distance'], 'pickup_latitude': trip['pickup_latitude'], 'pickup_longitude': trip['pickup_longitude']},trips))\n"
    ]
