--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    \n",
+    "    return list(map(lambda trip: {'trip_distance'}))\n",
     "\n",
     "\n",
     "\n",
