--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    return list(map(lambda trip: {'trip_distance': trip['trip_distance'], 'pickup_'}))\n",
+    "    return list(map(lambda trip: {'trip_distance': trip['trip_distance'], 'pickup_latitude': trip['pi']}))\n",
     "\n",
     "\n",
     "\n",
