Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,22 +295,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-24-6b6f139928da>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-6b6f139928da>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    pip install -r requirements.txt\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The following command must be run outside of the IPython shell:\n",
+      "\n",
+      "    $ pip install -r requirements.txt\n",
+      "\n",
+      "The Python package manager (pip) can only be used from outside of IPython.\n",
+      "Please reissue the `pip` command in a separate terminal or command prompt.\n",
+      "\n",
+      "See the Python documentation for more information on how to install packages:\n",
+      "\n",
+      "    https://docs.python.org/3/installing/\n"
      ]
     }
    ],
    "source": [
-    "pip install -r requirements.txt\n",
-    "import folium\n",
-    "manhattan_map = folium.Map(location=[40.7589, -73.9851], zoom_start=11)"
+    "pip install -r requirements.txt\n"
    ]
   },
   {
